# permutation-generator-rs

./: .gitignore  Cargo.toml  README.md
src/: error.rs  factorial.rs  lib.rs
src/permutation_generator/: mod.rs  permutation_generator_16.rs  permutation_generator_32.rs  permutation_generator_8.rs
src/single_permutation/: mod.rs  single_permutation_16.rs  single_permutation_32.rs  single_permutation_8.rs
